# agentbeats-challenge

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/fixtures/predictions/: generated_predictions.jsonl  sample_predictions.jsonl
data/fixtures/resolutions/: sample_events.jsonl  sample_resolutions.jsonl
docs/: evaluator-plan.md  futurex-paper.txt  purple-agent-responsibilities.md  research-spec.md
docs/green-agent/: architecture.md  benchmark-definition.md  plan.md  responsibilities.md
docs/purple-agent/: data-models.md  responsibilities.md
docs/research/: bibliography.md
docs/tools/: README.md  alpha-vantage.md  edgar.md  news.md  polymarket.md
scripts/: generate_resolutions.py  generate_watchlist_events.py
src/agentbeats/: __init__.py  cli.py  config.py  models.py
src/agentbeats/cli/: __init__.py  common.py  ingest.py  resolve.py  run.py  status.py  tool.py
src/agentbeats/domain/: finance.py
src/agentbeats/evaluator/: __init__.py  baseline.py  metrics.py  mvp.py
src/agentbeats/ingestion/: __init__.py  pipeline.py
src/agentbeats/ingestion/sources/: base.py  polymarket.py
src/agentbeats/predictor/: __init__.py  agent.py  fixtures.py
src/agentbeats/predictor/evidence/: alpha.py  base.py  edgar.py  market.py  news.py
src/agentbeats/resolution/: __init__.py  price_close.py
src/agentbeats/tools/: __init__.py  alpha_vantage.py  base.py  edgar.py  news.py  polymarket.py
